# frogs

./: CMakeLists.txt  LICENSE  README.md  frogs_physical_types.h
example/: differentiation_example.cpp  example.cpp  expressions_example.cpp  matrix_example.cpp  units_example.cpp  vectors_example.cpp
src/: frogs.cpp  frogs.h  frogs_angle.h  frogs_constants.h  frogs_diff.h  frogs_expressions.cpp  frogs_expressions.h  frogs_geom.h  frogs_matrix.h  frogs_physical_types.h  frogs_primitives.h  frogs_types_creator.h  frogs_types_fallback.h  frogs_utils.h  frogs_vector.h
test/: test.cpp
